removed unused files, removed unused resident fields, removed smartrent resident UI, improved code readability

--- a/app/views/layouts/smartrent/admin.html.erb
+++ b/app/views/layouts/smartrent/admin.html.erb
@@ -45,7 +45,9 @@
   <%= yield %>
   
   <%= render "layouts/flash" %>
-  <%= render "layouts/modal" %>
+  <%= 
+    #render "layouts/modal" 
+  %>
   
   <div id="spinner"> <%= image_tag("circle_loading.gif") %> Loading... </div>
   
