--- a/app/views/layouts/smartrent/_left_nav_links.html.erb
+++ b/app/views/layouts/smartrent/_left_nav_links.html.erb
@@ -7,8 +7,8 @@
   <li class="<%= "active" if controller_name == "features" %>">
     <a href="<%= raw admin_features_path %>"> <i class="fa fa-star fa-fw"></i> Features </a>
   </li>
-  <li class="<%= "active" if controller_name == "property_features" %>">
-    <a href="<%= raw import_admin_property_features_path %>"> <i class="fa fa-plus fa-fw"></i> Import Features </a>
+  <li class="<%= "active" if controller_name == "property_features" %>" style="display:none">
+    <a href="<%= raw import_admin_property_features_path %>"> <i class="fa fa-plus fa-fw"></i> Import Property Features </a>
   </li>
   <li class="<%= "active" if controller_name == "floor_plans" %>">
     <a href="<%= raw admin_floor_plans_path %>"> <i class="fa fa-info-circle fa-fw"></i> Floor Plans </a>
@@ -28,5 +28,5 @@
   <a href="<%= raw admin_rewards_path %>"> <i class="fa fa-trophy fa-fw"></i> Rewards </a>
 </li>
 <li>
-  <a href="<%= raw root_path %>"> <i class="fa fa-globe fa-fw"></i> Smartrent Website </a>
+  <a href="<%= raw smartrent.root_path %>" target="_blank"> <i class="fa fa-globe fa-fw"></i> Smartrent Website </a>
 </li>
