--- a/app/views/smartrent/admin/floor_plans/index.html.erb
+++ b/app/views/smartrent/admin/floor_plans/index.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'Import Floor Plans', import_admin_floor_plans_path, :class => "btn btn-default" %>
       <%= link_to 'New Floor Plan', new_admin_floor_plan_path, :class => "btn btn-primary" %>
     </div>
-    <h3>Listing admin_floor_plans</h3>
+    <h3>Listing Floor Plan</h3>
 
     <% if @admin_floor_plans.present? %>
       <table class="table">
