--- a/app/views/smartrent/admin/floor_plans/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="form-group">
       <%= f.label :property_id, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
-        <%= f.collection_select :property_id, Smartrent::Property.all, :id, :title, {:include_blank => "--Select Property"}, {:class => "form-control"} %>
+        <%= f.collection_select :property_id, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
