--- a/app/views/smartrent/admin/residents/rewards.html.erb
+++ b/app/views/smartrent/admin/residents/rewards.html.erb
@@ -14,12 +14,12 @@
     <% @rewards.each do |reward| %>
       <tr>
         <td><%= reward.resident.email %></td>
-        <td><%= number_to_currency reward.amount %></td>
+        <td><%= number_to_currency reward.amount, :precision => 0 %></td>
         <td><%= reward.property.name if reward.property %></td>
         <td><%= reward.period_start.to_s(:year_month_day) if reward.period_start %></td>
         <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
         <td><%= Smartrent::Reward.types[reward.type_] %></td>
-        <td><%= link_to 'Show', admin_reward_path(reward) %> | <%= link_to 'Edit', edit_admin_reward_path(reward) %> | <%= link_to 'Destroy', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', admin_reward_path(reward) %> | <%= link_to 'Edit', edit_admin_reward_path(reward) %> | <%= link_to 'Delete', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </table>
