--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -1425,7 +1425,7 @@ label{
   height:24px;
   margin:7px 0 0 0;
   padding:3px 0 3px 10px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 
 .memberInfo .loginForm .btn{
