--- a/app/views/smartrent/admin/features/index.html.erb
+++ b/app/views/smartrent/admin/features/index.html.erb
@@ -5,7 +5,7 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default" %>
+      <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default", :style => "display:none" %>
       <%= link_to 'New Feature', new_admin_feature_path, :class => "btn btn-primary" %>
     </div>
     <h3>Listing Features</h3>
@@ -20,7 +20,7 @@
         <% @admin_features.each do |admin_feature| %>
           <tr>
             <td><%= admin_feature.name %></td>
-            <td><%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | <%= link_to 'Destroy', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | <%= link_to 'Delete', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </table>
