--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -45,7 +45,7 @@
       <div class="form-group">
         <%= f.label :home_id, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.collection_select :home_id, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"},{:class => "form-control"}  %>
+          <%= f.collection_select :home_id, Smartrent::Home.order("title asc").all, :id, :title, {:include_blank => "--Select Home--"},{:class => "form-control"}  %>
         </div>
       </div>
     </div>
