--- a/app/views/smartrent/admin/more_homes/index.html.erb
+++ b/app/views/smartrent/admin/more_homes/index.html.erb
@@ -7,7 +7,7 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import More Homes', import_admin_more_homes_path, :class => "btn btn-default" %>
+      <%= link_to 'Import More Homes', import_admin_more_homes_path, :class => "btn btn-default", :style => "display:none" %>
       <%= link_to 'New More Home', new_admin_more_home_path, :class => "btn btn-primary" %>
     </div>
     <h3>Listing More Homes</h3>
@@ -31,7 +31,7 @@
             <td><%= more_home.sq_ft %></td>
             <td><%= more_home.featured %></td>
             <td><%= more_home.home.title %></td>
-            <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_admin_more_home_path(more_home) %> | <%= link_to 'Destroy', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_admin_more_home_path(more_home) %> | <%= link_to 'Delete', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </table>
@@ -50,6 +50,6 @@
 
 <script type="text/javascript">
   $(function(){
-    App.initPageLayout();
+    App.initPageLayout(null, null, null, true);
   });
 </script>
