--- a/app/views/smartrent/admin/rewards/_form.html.erb
+++ b/app/views/smartrent/admin/rewards/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="form-group">
       <%= f.label :property_id, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
-        <%= f.collection_select :property_id, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property"}, {:class => "form-control"} %>
+        <%= f.collection_select :property_id, Property.smartrent.order("name asc").all, :id, :name, {:include_blank => "--Select Property"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
