--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -5,7 +5,7 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default" %>
+      <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default", :style => "display:none" %>
       <%= link_to 'New reward', new_admin_reward_path, :class => "btn btn-primary" %>
     </div>
     <h3>Listing rewards</h3>
@@ -24,7 +24,7 @@
         <% @rewards.each do |reward| %>
           <tr>
             <td><%= reward.resident.email %></td>
-            <td><%= number_to_currency reward.amount %></td>
+            <td><%= number_to_currency reward.amount, :precision => 0 %></td>
             <td><%= reward.property.name if reward.property %></td>
             <td><%= reward.period_start.to_s(:year_month_day) if reward.period_start %></td>
             <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
@@ -32,7 +32,7 @@
             <td>
               <%= link_to 'Show', admin_reward_path(reward) %> | 
               <%= link_to 'Edit', edit_admin_reward_path(reward) %> | 
-              <%= link_to 'Destroy', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Delete', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %>
             </td>
           </tr>
         <% end %>
