--- a/app/views/smartrent/admin/settings/index.html.erb
+++ b/app/views/smartrent/admin/settings/index.html.erb
@@ -23,7 +23,7 @@
             <td>
               <%= link_to 'Show', admin_setting_path(setting) %> | 
               <%= link_to 'Edit', edit_admin_setting_path(setting) %> | 
-              <%= link_to 'Destroy', admin_setting_path(setting), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Delete', admin_setting_path(setting), method: :delete, data: { confirm: 'Are you sure?' } %>
             </td>
           </tr>
         <% end %>
