smartrent months fix, smartrent website links fix

--- a/app/views/smartrent/pages/program_rules.html.erb
+++ b/app/views/smartrent/pages/program_rules.html.erb
@@ -122,6 +122,5 @@
     </div>
   </div>
 
-  <p>*Program may vary by community. <%= link_to "See
-  Official Rules for all details.", program_rules_path%></p>
+  <p>*Program may vary by community. <%= link_to "See Official Rules for all details.", official_rules_path %></p>
 </section>
